make bought cards overflow to scroll and prevent from clicking on non-playable cards

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,9 @@ h1.title, h2.title {
 /************ bought cards **********/
 .bought-cards-container  {
     width: 100%;
+    /* when/if you buy a lot of unique cards (like aristocrats) this can get really long */
+    max-height: 500px;
+    overflow: scroll;
 }
 
 .card.bought-card {
